--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,27 +1,31 @@
-spring.application.name=hdn
 
+spring.config.import=optional:file:.env[.properties]
+
+spring.application.name=hdn
 server.port=8080
 
+# ===== DATABASE =====
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/comics_db
-spring.datasource.username=root
-spring.datasource.password=1234
+
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-
+# ===== JWT =====
 jwt.secret=dsadasdas_dasdad_dasdadasdasdadsadasdasdad
 jwt.expiration=86400000
 
-
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-
+# ===== REDIS =====
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT}
 spring.cache.type=redis
 
-app.cors.origins=http://localhost:3000
+# ===== CORS =====
+app.cors.origins=${APP_CORS_ORIGINS}
