--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,15 @@
-# Stage 1: Build
+# ===== BUILD =====
 FROM node:20-alpine AS builder
 WORKDIR /app
-COPY . .
+COPY package*.json ./
 RUN npm install
+COPY . .
 RUN npm run build
 
-# Stage 2: Run
+# ===== RUN =====
 FROM node:20-alpine
 WORKDIR /app
 COPY --from=builder /app ./
+
 EXPOSE 3000
-CMD ["npm","start"]
+CMD ["npm", "start"]
