--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,6 @@ SPRING_DATA_REDIS_HOST=localhost
 SPRING_DATA_REDIS_PORT=6379
 
 APP_CORS_ORIGINS=http://localhost:3000
+
+SENDER_EMAIL_ADDRESS=hdnit3ltvspkt@gmail.com
+SENDER_EMAIL_PASSWORD=jycgdvzwkngsfnmd
