--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -31,3 +31,11 @@ spring.cache.type=redis
 app.cors.origins=${APP_CORS_ORIGINS}
 
 spring.session.store-type=none
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SENDER_EMAIL_ADDRESS}
+spring.mail.password=${SENDER_EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
